# DirSync-Windows

./: .gitignore  README.md  app.py  build_windows.bat  pyproject.toml  requirements.txt
.github/workflows/: windows-build.yml  windows-tests.yml
assets/: README.md
src/: __init__.py  config.py  file_detector.py  gui.py  renamer.py  sync_engine.py  tray.py  utils.py  watcher.py
tests/: __init__.py  conftest.py  test_file_detector.py  test_integration.py  test_renamer.py  test_sync_engine.py  test_watcher.py
